tests/paczka1/small_fuzzy/16445703.err
Error in line 2: b0KkP7kHAMU A185 24,9
Error in line 13: b0KkP7kHAMU A874 30v,1
